# pgorpy

./: .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NEWS.md  README.md  configuration.conf
.github/scripts/: notes2news.pl  remove_obsolete_entries.sh  test_signatures.sh  update_locale.sh
.github/workflows/: documentation.yml  files.yml  locale.yml  macos.yml  queries.yml  release.yml  ubuntu.yml  website.yml
cmake/: Configure.cmake  Version.cmake
doc/: CMakeLists.txt  conf.py.in
doc/_static/: page_history.js
doc/_static/images/: CMakeLists.txt
doc/general/: CMakeLists.txt  concepts.rst  functions.rst  index.rst  installation.rst  introduction.rst  release_notes.rst  sampledata.rst  support.rst
doc/or_tools/: CMakeLists.txt  por_bin_packing.rst  por_knapsack.rst  por_multiple_knapsack.rst
doc/version/: CMakeLists.txt  por_full_version.rst  por_version.rst
docqueries/or_tools/: bin_packing.pg  bin_packing.result  knapsack.pg  knapsack.result  multiple_knapsack.pg  multiple_knapsack.result  test.conf
docqueries/version/: CMakeLists.txt  full_version.pg  full_version.result  version.pg  version.result
locale/en/LC_MESSAGES/: concepts.po  functions.po  index.po  installation.po  introduction.po  por_bin_packing.po  por_full_version.po  por_knapsack.po  por_multiple_knapsack.po  por_version.po  release_notes.po  sampledata.po  support.po
locale/pot/: concepts.pot  functions.pot  index.pot  installation.pot  introduction.pot  por_bin_packing.pot  por_full_version.pot  por_knapsack.pot  por_multiple_knapsack.pot  por_version.pot  release_notes.pot  sampledata.pot  support.pot
pgtap/or_tools/: inner_query.pg  no_crash_test.pg  types_check.pg
pgtap/version/full_version/: types_check.pg
pgtap/version/version/: types_check.pg
sql/: CMakeLists.txt
sql/or_tools/: bin_packing.sql  knapsack.sql  multiple_knapsack.sql
sql/pg_controls/: CMakeLists.txt  pgorpy-header.sql  pgorpy.control
sql/scripts/: build-extension-file.pl  build-extension-update-files.pl
sql/sigs/: pgorpy--0.0.sig
sql/version/: CMakeLists.txt  full_version.sql  version.sql
tools/developer/: run.sh  taptest.sh
tools/scripts/: fix_typos.sh  get_signatures.sh
tools/testers/: doc_queries_generator.pl  general_pgtap_tests.sql  no_crash_test.sql  pg_prove_tests.sh  sampledata.sql  setup_db.sh
